# pytiled_parser

./: .gitignore  .pylintrc  .readthedocs.yml  .style.yapf  CHANGELOG.md  README.md  dev_requirements.txt  make.bat  make.sh  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  publish-to-pypi.yml  test.yml
docs/: conf.py  index.md  index.rst
docs/api/: common_types.rst  index.rst  layer.rst  map.rst  objects.rst  parser.rst  properties.rst  tileset.rst  wang_set.rst  world.rst
docs/guide/: index.rst  map_loading.rst
docs/reference/: common_types.md  parser.md  tiled_map.md  tiled_object.md  tileset.md  wang_set.md  world.md
docs/source/: api.rst  conf.py  index.rst
pytiled_parser/: __init__.py  common_types.py  foo.py  layer.py  map.py  objects.py  parser.py  properties.py  template.py  tiled_map.py  tiled_object.py  tileset.py  typing_helpers.py  util.py  utilities.py  version.py  wang_set.py  world.py  xml_parser.py
pytiled_parser/parsers/json/: layer.py  properties.py  tiled_map.py  tiled_object.py  tileset.py  wang_set.py
pytiled_parser/parsers/tmx/: layer.py  properties.py  tiled_map.py  tiled_object.py  tileset.py  wang_set.py
test/: assets  collision_test.py  config.py  foo.py  output.py  test2.py  test_attr.py  test_output.py  test_tiled-bak.py  test_tiled.py
tests/: __init__.py  test_infinite_maps.py  test_invalid_format.py  test_layer.py  test_map.py  test_parser.py  test_pytiled_parser_integration.py  test_test_map_simple_offset.py  test_tiled_object.py  test_tiled_object_json.py  test_tiled_object_tmx.py  test_tileset.py  test_world.py
tests/test_data/: invalid_format.garbage  simple_objects.json  test_map_image_tile_set.json  test_map_image_tile_set.tmx  test_map_infinite.json  test_map_infinite.tmx  test_map_simple.json  test_map_simple.tmx  test_map_simple_hitboxes.tmx  test_map_simple_meme.json  test_map_simple_meme.tmx  test_map_simple_objects.tmx  test_map_simple_offset.json  test_map_simple_offset.tmx  test_typing_helpers.py  tile_set_image.json  tile_set_image.tsx  tile_set_image_objects.json  tile_set_image_objects.tsx
tests/test_data/all_objects/: tileset_image_objects.json
tests/test_data/example_maps/all_objects/: all_objects.json  tileset_image_objects.json
tests/test_data/example_maps/simple_external_tileset/: map_simple_external_tileset.json
tests/test_data/example_maps/simple_infinite/: tileset_image.json
tests/test_data/layer_tests/all_layer_types/: expected.py  map.json  map.tmx  tileset.json
tests/test_data/layer_tests/b64/: expected.py  map.json  map.tmx
tests/test_data/layer_tests/b64_gzip/: expected.py  map.json  map.tmx
tests/test_data/layer_tests/b64_lzib/: map.json
tests/test_data/layer_tests/b64_zlib/: expected.py  map.json  map.tmx  tileset.json
tests/test_data/layer_tests/b64_zstd/: map.json  map.tmx  tileset.json
tests/test_data/layer_tests/csv/: map.json
tests/test_data/layer_tests/infinite_map/: expected.py  map.json  map.tmx
tests/test_data/layer_tests/infinite_map_b64/: expected.py  map.json  map.tmx
tests/test_data/layer_tests/no_layers/: expected.py  map.json  map.tmx
tests/test_data/layer_tests/unknown_type/: map.json
tests/test_data/map_tests/cross_format_tileset/: expected.py  map.json  map.tmx  tileset.tsx
tests/test_data/map_tests/embedded_tileset/: expected.py  map.json  map.tmx
tests/test_data/map_tests/external_tileset_dif_dir/: expected.py  map.json  map.tmx
tests/test_data/map_tests/hexagonal/: expected.py  map.json  map.tmx  tileset.json  tileset.tsx
tests/test_data/map_tests/json_invalid_tileset/: map.json  (+1 more)
tests/test_data/simple_external_tileset/: map.json  tile_set.json
tests/test_data/simple_offset/: map_simple_offset.json
tests/unit2/: test_parser.py  test_pytiled_parser.py  test_pytiled_parser_integration.py.bax
(+55 files in other folders)
