[project]
name = "pytiled_parser"
version = "2.2.2"
description = "A library for parsing Tiled Map Editor maps and tilesets"
readme = "README.md"
authors = [
    {name="Benjamin Kirkbride", email="BenjaminKirkbride@gmail.com"},
    {name="Darren Eberly", email="Darren.Eberly@gmail.com"},
]
maintainers = [
    {name="Darren Eberly", email="Darren.Eberly@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules"  
]
dependencies = [
    "attrs >= 18.2.0",
    "typing-extensions"
]

[project.urls]
homepage = "https://github.com/pythonarcade/pytile_parser"

[project.optional-dependencies]
zstd = [
    "zstd"
]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "sphinx",
    "sphinx-sitemap",
    "myst-parser",
    "furo"
]

tests = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

build = [
    "build"
]

[tool.setuptools.packages.find]
include = ["pytiled_parser", "pytiled_parser.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
exclude = ["__init__.py"]
ignore = ["E501"]