[metadata]
name = pytiled_parser
description = PongWall Server Prototype
version = 0.9.1
author = Benjamin Kirkbride
author-email = BenjaminKirkbride@gmail.com
license = MIT
license-file = LICENSE
url = https://github.com/Beefy-Swain/pytiled_parser

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ~=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
install_requires =
  attrs

[options.extras_require]
tests =
  pytest
  pytest-cov
  black
  pylint
  mypy
  isort

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# Global options:

[mypy]
python_version = 3.6
warn_unused_configs = True
warn_redundant_casts = True

# Per-module options:
[mypy-pytiled_parser.*]
disallow_any_unimported = False
disallow_any_decorated = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True
